--- a/examples/rest_api/rest_api.ipynb
+++ b/examples/rest_api/rest_api.ipynb
@@ -44,34 +44,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"event\": \"Started ragna worker\", \"timestamp\": \"2023-09-18T20:04:44.009806Z\", \"level\": \"info\", \"pathname\": \"/home/philip/git/ora/ragna/core/_rag.py\", \"lineno\": 48}\n"
+      "{\"event\": \"Started ragna worker\", \"timestamp\": \"2023-09-20T19:14:35.258880Z\", \"level\": \"info\"}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [61951]\n",
+      "INFO:     Started server process [56010]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
       "INFO:     Uvicorn running on http://127.0.0.1:31476 (Press CTRL+C to quit)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:38984 - \"GET /health HTTP/1.1\" 200 OK\n"
+     ]
     }
    ],
    "source": [
+    "import contextlib\n",
     "import subprocess\n",
+    "import time\n",
+    "\n",
+    "import httpx\n",
     "\n",
     "proc = subprocess.Popen([\"ragna\", \"api\", \"--config\", \"ragna.demo_config\"])\n",
     "\n",
-    "try:\n",
-    "    # FIXME: there needs to be a better way to check this.\n",
-    "    stdout, stderr = proc.communicate(timeout=5)\n",
-    "except subprocess.TimeoutExpired:\n",
-    "    # This means the worker process did not shut down and thus seems to be\n",
-    "    # running\n",
-    "    pass\n",
+    "client = httpx.AsyncClient()\n",
+    "\n",
+    "timeout = 10\n",
+    "start = time.time()\n",
+    "while (time.time() - start) < timeout:\n",
+    "    with contextlib.suppress(httpx.ConnectError):\n",
+    "        response = await client.get(f\"{URL}/health\")\n",
+    "        if response.is_success:\n",
+    "            break\n",
+    "\n",
+    "    time.sleep(0.5)\n",
     "else:\n",
-    "    raise RagnaException(f\"REST API terminated unexpectedly {stdout} {stderr}\")"
+    "    proc.kill()\n",
+    "    stdout, stderr = proc.communicate()\n",
+    "    print(stdout)\n",
+    "    print(stderr)\n",
+    "    raise RuntimeError(\"Unable to start the Ragna REST API\")"
    ]
   },
   {
@@ -101,6 +120,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8645f0d-0f4e-4853-8740-6772f4ed4307",
+   "metadata": {},
+   "source": [
+    "Before we start the Rag use case, let's make sure the "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eef26a9a-0ee5-4bd5-87ab-e1b90de520f9",
    "metadata": {},
    "source": [
@@ -117,17 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "from pprint import pprint\n",
-    "\n",
-    "import httpx\n",
-    "\n",
-    "client = httpx.AsyncClient()\n",
     "\n",
     "response = await client.get(f\"{URL}/chats\", params={\"user\": USER})\n",
     "pprint(response.json())"
@@ -151,9 +174,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:     127.0.0.1:38984 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'assistants': ['Ragna/DemoAssistant'],\n",
-      " 'source_storages': ['Ragna/DemoSourceStorage']}\n",
-      "INFO:     127.0.0.1:59314 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n"
+      " 'source_storages': ['Ragna/DemoSourceStorage']}\n"
      ]
     }
    ],
@@ -213,9 +236,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"GET /document/new?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
-      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6IjQ0MGU1YjJjLTg0OTMtNGU3Zi04YzZlLWM5Zjk2NGUyYTYwMSIsImV4cCI6MTY5NTA2NzUxNi42OTYxNzYzfQ.P642iutOk7ptzK3e974ZJLVcSw0hnd1rkty5F10z_Sw'},\n",
-      " 'document': {'id': '440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
+      "INFO:     127.0.0.1:38984 - \"GET /document/new?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
+      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImM4ZGE2MWNjLTA5MzMtNDNlNi05NjVlLWViZGY5ODFmZTk0YiIsImV4cCI6MTY5NTIzNzMwNS45MjQwNDc1fQ.moZJIXRmLO92SvpC3nC8gstFqL-rrnINljyaiIArLLc'},\n",
+      " 'document': {'id': 'c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
       "              'name': 'document0.txt'},\n",
       " 'url': 'http://127.0.0.1:31476/document/upload'}\n"
      ]
@@ -228,6 +251,7 @@
     "    f\"{URL}/document/new\", params={\"user\": USER, \"name\": path.name}\n",
     ")\n",
     "document_info = response.json()\n",
+    "document = document_info[\"document\"]\n",
     "pprint(document_info)"
    ]
   },
@@ -249,19 +273,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"POST /document/upload HTTP/1.1\" 200 OK\n",
-      "{'id': '440e5b2c-8493-4e7f-8c6e-c9f964e2a601', 'name': 'document0.txt'}\n"
+      "INFO:     127.0.0.1:38984 - \"POST /document/upload HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
    "source": [
-    "response = await client.post(\n",
+    "await client.post(\n",
     "    document_info[\"url\"],\n",
     "    data=document_info[\"data\"],\n",
     "    files={\"file\": open(path, \"rb\")},\n",
     ")\n",
-    "document = response.json()\n",
-    "pprint(document)"
+    "assert response.is_success"
    ]
   },
   {
@@ -282,18 +304,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"GET /document/new?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:59314 - \"POST /document/upload HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:59314 - \"GET /document/new?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:59314 - \"POST /document/upload HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:38984 - \"GET /document/new?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /document/upload HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"GET /document/new?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /document/upload HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'id': '440e5b2c-8493-4e7f-8c6e-c9f964e2a601', 'name': 'document0.txt'},\n",
-       " {'id': 'e627a9b7-0293-4334-9c55-e21c71cd38f6', 'name': 'document1.txt'},\n",
-       " {'id': 'aa818525-b2b7-45eb-8efd-b78b10c335cc', 'name': 'document2.txt'}]"
+       "[{'id': 'c8da61cc-0933-43e6-965e-ebdf981fe94b', 'name': 'document0.txt'},\n",
+       " {'id': '84a5e2e3-a706-4d04-93d6-4e31d6917efc', 'name': 'document1.txt'},\n",
+       " {'id': 'e13655f0-99b0-4f0b-8ba5-95f05d674617', 'name': 'document2.txt'}]"
       ]
      },
      "execution_count": 9,
@@ -310,14 +332,11 @@
     "            f\"{URL}/document/new\", params={\"user\": USER, \"name\": path.name}\n",
     "        )\n",
     "    ).json()\n",
-    "    documents.append(\n",
-    "        (\n",
-    "            await client.post(\n",
-    "                document_info[\"url\"],\n",
-    "                data=document_info[\"data\"],\n",
-    "                files={\"file\": open(path, \"rb\")},\n",
-    "            )\n",
-    "        ).json()\n",
+    "    documents.append(document_info[\"document\"])\n",
+    "    await client.post(\n",
+    "        document_info[\"url\"],\n",
+    "        data=document_info[\"data\"],\n",
+    "        files={\"file\": open(path, \"rb\")},\n",
     "    )\n",
     "\n",
     "documents"
@@ -341,14 +360,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"POST /chat/new?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /chat/new?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': False,\n",
-      " 'id': '80ccb701-516c-400b-b076-6c6e9d28f371',\n",
+      " 'id': '07340622-9c3a-467c-8c54-b61bac48ee65',\n",
       " 'messages': [],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
-      "                               'e627a9b7-0293-4334-9c55-e21c71cd38f6',\n",
-      "                               'aa818525-b2b7-45eb-8efd-b78b10c335cc'],\n",
+      "              'document_ids': ['c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
+      "                               '84a5e2e3-a706-4d04-93d6-4e31d6917efc',\n",
+      "                               'e13655f0-99b0-4f0b-8ba5-95f05d674617'],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
@@ -389,17 +408,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"POST /chat/80ccb701-516c-400b-b076-6c6e9d28f371/start?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /chat/07340622-9c3a-467c-8c54-b61bac48ee65/start?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': False,\n",
-      " 'id': '80ccb701-516c-400b-b076-6c6e9d28f371',\n",
+      " 'id': '07340622-9c3a-467c-8c54-b61bac48ee65',\n",
       " 'messages': [{'content': 'How can I help you with the documents?',\n",
-      "               'id': 'fdcc559f-96f9-4170-8073-d1b96b1055a4',\n",
+      "               'id': '679c7036-9f49-4a60-b7e2-30a52619b55e',\n",
       "               'role': 'system',\n",
       "               'sources': []}],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
-      "                               'aa818525-b2b7-45eb-8efd-b78b10c335cc',\n",
-      "                               'e627a9b7-0293-4334-9c55-e21c71cd38f6'],\n",
+      "              'document_ids': ['84a5e2e3-a706-4d04-93d6-4e31d6917efc',\n",
+      "                               'c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
+      "                               'e13655f0-99b0-4f0b-8ba5-95f05d674617'],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
@@ -433,7 +452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"POST /chat/80ccb701-516c-400b-b076-6c6e9d28f371/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /chat/07340622-9c3a-467c-8c54-b61bac48ee65/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
       "{'content': \"I just pretend to be an LLM. I can't actually help with your \"\n",
       "            'prompt:\\n'\n",
       "            '\\n'\n",
@@ -441,19 +460,19 @@
       "            '\\n'\n",
       "            'I was given the following sources:\\n'\n",
       "            '\\n'\n",
+      "            '- document1.txt: This is content of document 1\\n'\n",
       "            '- document0.txt: This is content of document 0\\n'\n",
-      "            '- document2.txt: This is content of document 2\\n'\n",
-      "            '- document1.txt: This is content of document 1',\n",
-      " 'id': '24c73f3b-e89d-442f-b175-87c816d690eb',\n",
+      "            '- document2.txt: This is content of document 2',\n",
+      " 'id': '0d713ff5-72c5-42d6-8cc4-33dc38b6e6ae',\n",
       " 'role': 'assistant',\n",
-      " 'sources': [{'document_id': '440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
+      " 'sources': [{'document_id': '84a5e2e3-a706-4d04-93d6-4e31d6917efc',\n",
+      "              'document_name': 'document1.txt',\n",
+      "              'location': ''},\n",
+      "             {'document_id': 'c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
       "              'document_name': 'document0.txt',\n",
       "              'location': ''},\n",
-      "             {'document_id': 'aa818525-b2b7-45eb-8efd-b78b10c335cc',\n",
+      "             {'document_id': 'e13655f0-99b0-4f0b-8ba5-95f05d674617',\n",
       "              'document_name': 'document2.txt',\n",
-      "              'location': ''},\n",
-      "             {'document_id': 'e627a9b7-0293-4334-9c55-e21c71cd38f6',\n",
-      "              'document_name': 'document1.txt',\n",
       "              'location': ''}]}\n",
       "I just pretend to be an LLM. I can't actually help with your prompt:\n",
       "\n",
@@ -461,9 +480,9 @@
       "\n",
       "I was given the following sources:\n",
       "\n",
+      "- document1.txt: This is content of document 1\n",
       "- document0.txt: This is content of document 0\n",
-      "- document2.txt: This is content of document 2\n",
-      "- document1.txt: This is content of document 1\n"
+      "- document2.txt: This is content of document 2\n"
      ]
     }
    ],
@@ -494,15 +513,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:59314 - \"POST /chat/80ccb701-516c-400b-b076-6c6e9d28f371/close?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38984 - \"POST /chat/07340622-9c3a-467c-8c54-b61bac48ee65/close?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': True,\n",
-      " 'id': '80ccb701-516c-400b-b076-6c6e9d28f371',\n",
+      " 'id': '07340622-9c3a-467c-8c54-b61bac48ee65',\n",
       " 'messages': [{'content': 'How can I help you with the documents?',\n",
-      "               'id': 'fdcc559f-96f9-4170-8073-d1b96b1055a4',\n",
+      "               'id': '679c7036-9f49-4a60-b7e2-30a52619b55e',\n",
       "               'role': 'system',\n",
       "               'sources': []},\n",
       "              {'content': 'What is Ragna?',\n",
-      "               'id': '32a24b15-2a20-4ee7-a353-2cf8174b3052',\n",
+      "               'id': 'edd7273b-2fbc-4d40-8b82-ce4b29805430',\n",
       "               'role': 'user',\n",
       "               'sources': []},\n",
       "              {'content': \"I just pretend to be an LLM. I can't actually help \"\n",
@@ -512,24 +531,24 @@
       "                          '\\n'\n",
       "                          'I was given the following sources:\\n'\n",
       "                          '\\n'\n",
+      "                          '- document1.txt: This is content of document 1\\n'\n",
       "                          '- document0.txt: This is content of document 0\\n'\n",
-      "                          '- document2.txt: This is content of document 2\\n'\n",
-      "                          '- document1.txt: This is content of document 1',\n",
-      "               'id': '24c73f3b-e89d-442f-b175-87c816d690eb',\n",
+      "                          '- document2.txt: This is content of document 2',\n",
+      "               'id': '0d713ff5-72c5-42d6-8cc4-33dc38b6e6ae',\n",
       "               'role': 'assistant',\n",
-      "               'sources': [{'document_id': '440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
+      "               'sources': [{'document_id': '84a5e2e3-a706-4d04-93d6-4e31d6917efc',\n",
+      "                            'document_name': 'document1.txt',\n",
+      "                            'location': ''},\n",
+      "                           {'document_id': 'c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
       "                            'document_name': 'document0.txt',\n",
       "                            'location': ''},\n",
-      "                           {'document_id': 'aa818525-b2b7-45eb-8efd-b78b10c335cc',\n",
+      "                           {'document_id': 'e13655f0-99b0-4f0b-8ba5-95f05d674617',\n",
       "                            'document_name': 'document2.txt',\n",
-      "                            'location': ''},\n",
-      "                           {'document_id': 'e627a9b7-0293-4334-9c55-e21c71cd38f6',\n",
-      "                            'document_name': 'document1.txt',\n",
       "                            'location': ''}]}],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['440e5b2c-8493-4e7f-8c6e-c9f964e2a601',\n",
-      "                               'aa818525-b2b7-45eb-8efd-b78b10c335cc',\n",
-      "                               'e627a9b7-0293-4334-9c55-e21c71cd38f6'],\n",
+      "              'document_ids': ['84a5e2e3-a706-4d04-93d6-4e31d6917efc',\n",
+      "                               'c8da61cc-0933-43e6-965e-ebdf981fe94b',\n",
+      "                               'e13655f0-99b0-4f0b-8ba5-95f05d674617'],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
