Switch task queue to huey

--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -3,22 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e675a59d-f656-41f9-828a-912fd0e176ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _is_notebook():\n",
-    "    try:\n",
-    "        from IPython import get_ipython\n",
-    "\n",
-    "        return \"IPKernelApp\" in get_ipython().config\n",
-    "    except Exception:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "3d1b9f01-ae07-488e-b3d2-62d01ad828c9",
    "metadata": {},
    "outputs": [],
@@ -30,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a3e91c88-13ca-417e-8205-9ef3b16f0d7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.1.dev16+ga4d3603.d20230914143851'"
+       "'0.1.dev21+g7f8ec2d.d20230925071852'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a3759a6-ffb0-47f7-be40-cf9d62fc67da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Config(state_database_url='sqlite://', queue_database_url='redis://127.0.0.1:6379', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', local_cache_root=PosixPath('/home/philip/.cache/ragna'), document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='9e6020416528a671c3057800c6ce4452b6f77e9b29f62647fa9a8fb855065f54', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
+       "Config(state_database_url='sqlite://', queue_database_url='redis://127.0.0.1:6379', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', local_cache_root=PosixPath('/home/philip/.cache/ragna'), document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='ef1ffa68d4d397af5373c2bf2095abef937be87b8a52e4debabae0c0dfcf9f38', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "87613cac-44ba-4b85-ad3e-a1127dd65aa5",
    "metadata": {},
    "outputs": [],
@@ -89,16 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "818ff37c-d693-44b2-9d56-104eb2d86f59",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"event\": \"Started ragna worker\", \"timestamp\": \"2023-09-20T19:14:01.928952Z\", \"level\": \"info\"}\n",
-      "Ragna is an open-source RAG orchestration app. It is designed to help users create and manage RAG (Red, Amber, Green) status reports. Ragna allows users to easily track and communicate the status of various projects or tasks using a simple color-coded system. It provides a user-friendly interface for creating and updating RAG reports, as well as generating visualizations and reports based on the data entered. Ragna is built on open-source technologies and is available for free to use and customize.\n"
+     "ename": "RagnaException",
+     "evalue": "Worker process terminated unexpectedly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRagnaException\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 9\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mragna\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01massistant\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     RagnaDemoAssistant,\n\u001b[1;32m      4\u001b[0m     OpenaiGpt35Turbo16kAssistant,\n\u001b[1;32m      5\u001b[0m     OpenaiGpt4Assistant,\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mragna\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msource_storage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChromaSourceStorage, RagnaDemoSourceStorage\n\u001b[0;32m----> 9\u001b[0m rag \u001b[38;5;241m=\u001b[39m \u001b[43mRag\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdemo_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m rag\u001b[38;5;241m.\u001b[39mnew_chat(\n\u001b[1;32m     12\u001b[0m     documents\u001b[38;5;241m=\u001b[39m[document_path],\n\u001b[1;32m     13\u001b[0m     source_storage\u001b[38;5;241m=\u001b[39mRagnaDemoSourceStorage,\n\u001b[1;32m     14\u001b[0m     assistant\u001b[38;5;241m=\u001b[39mRagnaDemoAssistant,\n\u001b[1;32m     15\u001b[0m ) \u001b[38;5;28;01mas\u001b[39;00m chat:\n\u001b[1;32m     16\u001b[0m     prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat is Ragna?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m~/git/ora/ragna/core/_rag.py:51\u001b[0m, in \u001b[0;36mRag.__init__\u001b[0;34m(self, config, start_redis_server, start_ragna_worker, deselect_unavailable_components)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_queue \u001b[38;5;241m=\u001b[39m Queue()\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# self._queue.task(name=RagnaTask.__qualname__)(Worker._execute_job)\u001b[39;00m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# self._queue, redis_server_proc = _get_queue(\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m#     self.config.queue_database_url, start_redis_server=start_redis_server\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m#     self._logger.info(\"Started redis server\")\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m#     self._subprocesses.add(redis_server_proc)\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m ragna_worker_proc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_start_ragna_worker\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_ragna_worker\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ragna_worker_proc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarted ragna worker\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/git/ora/ragna/core/_rag.py:128\u001b[0m, in \u001b[0;36mRag._start_ragna_worker\u001b[0;34m(self, start)\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m proc\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 128\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m RagnaException(\n\u001b[1;32m    129\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWorker process terminated unexpectedly\u001b[39m\u001b[38;5;124m\"\u001b[39m, stdout\u001b[38;5;241m=\u001b[39mstdout, stderr\u001b[38;5;241m=\u001b[39mstderr\n\u001b[1;32m    130\u001b[0m     )\n",
+      "\u001b[0;31mRagnaException\u001b[0m: Worker process terminated unexpectedly"
      ]
     }
    ],
@@ -116,7 +105,7 @@
     "async with await rag.new_chat(\n",
     "    documents=[document_path],\n",
     "    source_storage=RagnaDemoSourceStorage,\n",
-    "    assistant=OpenaiGpt35Turbo16kAssistant,\n",
+    "    assistant=RagnaDemoAssistant,\n",
     ") as chat:\n",
     "    prompt = \"What is Ragna?\"\n",
     "    answer = await chat.answer(prompt)\n",
@@ -126,19 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f151a0e7240>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f151a0e7440>}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import itertools\n",
     "import asyncio\n",
@@ -170,19 +150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): Ragna is an open-source RAG (Response Analysis Graph) orchestration app. It is designed to help users create conversational AI applications by providing a framework for managing and orchestrating the flow of conversations. Ragna allows developers to define conversation flows, handle user inputs, and generate dynamic responses based on predefined rules and logic. It is built on top of the Rasa framework and provides additional features and functionalities to simplify the development process.,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): Ragna is an open-source RAG orchestration app.}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = dict(zip(experiments.keys(), await asyncio.gather(*experiments.values())))\n",
     "pprint(results)"
